Update dependencies
Add support for bullseye